# vcpi-client

./: .gitignore  README.md  pyproject.toml  test.R  vcpi-package.Rproj
src/vcpi/: __init__.py  auth.py  data.py
tests/: conftest.py  test_auth.py  test_data.py  test_integration.py
