[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vcpi"
version = "0.1.0"
description = "Python client for the Virtual Cell Pharmacology Initiative (VCPI)"
readme = "README.md"
authors = [{ name = "Ginkgo Datapoints" }]
requires-python = ">=3.9"
dependencies = [
    "polars>=1.38.1",
    "pyarrow>=15.0.0",
    "duckdb>=1.4.4",
    "httpx>=0.28.1",
    "keyring>=25.7.0",
    "tqdm>=4.67.3",
]

[project.optional-dependencies]
test = [
    "pytest",
    "respx",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
markers = [
    "integration: hits the real API (requires TVC_TOKEN)",
]